<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">com.howell.ecameraAp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="ip_address">IP：</string>
    <string name="camera_name">Name：</string>
    <string name="channel">Channel：</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="user_name">UserName：</string>
    <string name="user_password">Password：</string>
    <string name="login">Login</string>
    <string name="no_sdcard">no sdcard</string>
    <string name="save_picture">picture has been saved</string>
    <string name="load_more">More</string>
    <string name="pull_to_refresh">pull to refresh</string>
	<string name="release_to_refresh">Release to refresh</string>
	<string name="refreshing">Refreshing</string>
	<string name="last_update">Last update</string>
	<string name="load_data">Now loading</string>
	<string name="camera_list">Camera List</string>
	<string name="download_list">Download List</string>
	<string name="login_fail">login fail,please check your network first</string>
	<string name="input_name">please input device name</string>
	<string name="input_ip">please input devicde ip</string>
	<string name="input_channel">please input device channel</string>
	<string name="delete">delete</string>
	<string name="wether_delete">wehter delete this device？</string>
	<string name="zoom_tele">zoomtele</string>
	<string name="zoom_wide">zoomwide</string>
</resources>
