<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backgroundclear1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="10dip" >

            <TextView
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:text="@string/camera_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_camera_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext"
                android:ems="10" />
            <requestFocus />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginBottom="10dip" >

            <TextView
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ip_address" />

            <EditText
                android:id="@+id/et_ip"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext" >
            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginBottom="20dip" >

            <TextView
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/channel" />

            <EditText
                android:id="@+id/et_channel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext"
                android:text="0"
                android:ems="10" >

            </EditText>

        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_selector"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="@string/ok" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_selector"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>
	
</LinearLayout>
